--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Bike On Track</title>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="template.css">
+		<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 		<meta charset="utf-8">
 	</head>
 	<body>
